- PSR-2. - Default chunk optimized for Twitter Bootstrap 3. Version 1.1.5-pl

--- a/assets/components/ajaxform/css/default.css
+++ b/assets/components/ajaxform/css/default.css
@@ -1,22 +1,25 @@
 @import url('./lib/jquery.jgrowl.min.css');
-
-.af-message-success {background-color: green !important;}
-.af-message-error {background-color: brown !important;}
-.af-message-info {background-color: black !important;}
-
+.af-message-success { background-color: green !important; }
+.af-message-error { background-color: brown !important; }
+.af-message-info { background-color: black !important; }
 .ajax_form.af_example {
-	width: 500px;
+    width: 100%;
 }
 .ajax_form.af_example .controls input,
 .ajax_form.af_example .controls textarea {
-	width: 100%;
-}
-.ajax_form.af_example .controls [type="submit"] {
-	float: right;
-}
-.ajax_form.af_example .control-group {
-	clear: both;
+    width: 100%;
 }
 .ajax_form .error {
-	color: brown;
+    color: brown;
+}
+@media screen and (min-width: 320px) {
+    .ajax_form.af_example .controls button[type="submit"] {
+        float: right;
+    }
+}
+@media screen and (max-width: 320px) {
+    .ajax_form.af_example .controls button {
+        width: 100%;
+        margin-top: 5px;
+    }
 }
